# calc-rs

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  calc.d.ts  package.json  tsconfig.json
.github/: README.md
.github/workflows/: basic.yml  ci.yml  test.yml
artifacts/: calc_manager.wasm  calc_scheduler.wasm  calc_strategy.wasm  checksums.txt  distributor.wasm  exchange.wasm  exchange_fin.wasm  exchanger.wasm  manager.wasm  scheduler.wasm  strategy.wasm  twap.wasm
contracts/calc-factory/: Cargo.toml
contracts/calc-factory/src/: contract.rs  msg.rs  state.rs  types.rs
contracts/calc-vault/: Cargo.toml
contracts/calc-vault/src/: contract.rs  msg.rs  state.rs  types.rs
contracts/dca/: Cargo.toml
contracts/dca/src/: contract.rs  state.rs
contracts/distributor/: Cargo.toml
contracts/distributor/src/: contract.rs  lib.rs  state.rs  test.rs  types.rs
contracts/exchange/: Cargo.toml
contracts/exchange-fin/: Cargo.toml
contracts/exchange-fin/src/: contract.rs  state.rs  types.rs
contracts/exchange/src/: contract.rs  lib.rs  state.rs  types.rs
contracts/exchange/src/exchanges/: fin.rs  mock.rs  mod.rs  pool.rs  thor.rs
contracts/exchanger/: Cargo.toml
contracts/exchanger/src/: contract.rs  lib.rs  state.rs  types.rs
contracts/exchanger/src/exchanges/: fin.rs  fin_limit.rs  fin_market.rs  mock.rs  mod.rs  thor.rs  thorchain.rs
contracts/manager/: Cargo.toml  README.md
contracts/manager/schema/: calc-manager.json  manager.json
contracts/manager/schema/raw/: execute.json  instantiate.json  query.json  response_to_config.json  response_to_strategies.json  response_to_strategies_by_id.json  response_to_strategy.json
contracts/manager/src/: contract.rs  state.rs  types.rs
contracts/scheduler/: Cargo.toml  README.md
contracts/scheduler/schema/: calc-scheduler.json  scheduler.json
contracts/scheduler/schema/raw/: execute.json  query.json  response_to_filtered.json
contracts/scheduler/src/: contract.rs  state.rs  types.rs
contracts/stoploss/: Cargo.toml
contracts/stoploss/src/: contract.rs  state.rs  types.rs
contracts/strategy/: Cargo.toml  README.md
contracts/strategy/schema/: calc-strategy.json  strategy.json
contracts/strategy/schema/raw/: execute.json  instantiate.json  query.json  response_to_balances.json  response_to_config.json  response_to_statistics.json
contracts/strategy/src/: contract.rs  events.rs  lib.rs  state.rs  strategies.rs  types.rs
contracts/strategy/src/strategies/: accumulate.rs  dca.rs  mod.rs
contracts/strategy/src/tests/: integration.rs
contracts/tokenizer/: Cargo.toml  README.md
contracts/tokenizer/schema/: calc-tokenizer.json  scheduler.json
contracts/tokenizer/schema/raw/: execute.json  instantiate.json  query.json  response_to_config.json  response_to_filtered.json  response_to_owned.json
contracts/tokenizer/src/: contract.rs  state.rs
contracts/twap/: Cargo.toml
contracts/twap/src/: contract.rs  state.rs  types.rs
contracts/vault/: Cargo.toml
contracts/vault/src/: contract.rs  domain.rs  events.rs  execution.rs  lib.rs  validation.rs
scripts/: MsgCompiled.js  generate-types.ts  optimize.sh  query.proto  run.ts  schema.sh  script.ts  types.ts  upload.ts
tests/: Cargo.toml
tests/src/: harness.rs  integration.rs  lib.rs  strategy_builder.rs  strategy_handler.rs
