[workspace]
members = ["packages/*", "contracts/*"]
resolver = "1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
anybuf = "1.0"
calc-rs = { path = "packages/calc-rs" }
calc-rs-test = { path = "packages/calc-rs-test" }
cosmwasm-schema = "2.2.0"
cosmwasm-std = { version = "2.2.2", features = ["cosmwasm_2_1"] }
cosmwasm-storage = "1.5.2"
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
cw2 = "2.0.0"
prost = "0.13"
rand = "0.9.1"
rstest = "0.25.0"
rujira-rs = { git = "https://gitlab.com/thorchain/rujira.git", rev = "171f878c6e524cf5e2817e2fd6e7033bce8216f5" }
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
