[package]
name = "integration"
version = "0.0.1"
authors = ["james <james@calculated.fi>"]
edition = "2021"

exclude = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
calc-rs = { workspace = true }
calc-rs-test = { workspace = true }
cosmwasm-std = { workspace = true }
cw-multi-test = { workspace = true }
calc-manager = { workspace = true }
rujira-rs = { workspace = true }
rujira-fin = { git = "https://gitlab.com/thorchain/rujira.git", rev = "359e9661bb5231e8aa89aff9a4ac6bd92fc3507d", package = "rujira-fin" }
calc-scheduler = { workspace = true }
calc-strategy = { workspace = true }
