[package]
name = "integration"
version = "0.0.1"
authors = ["james <james@calculated.fi>"]
edition = "2021"

exclude = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
calc-rs = { workspace = true }
calc-rs-test = { workspace = true }
cosmwasm-std = { workspace = true }
cw-multi-test = { workspace = true }
calc-manager = { workspace = true }
rujira-rs = { workspace = true }
rujira-fin = { git = "https://gitlab.com/thorchain/rujira.git", rev = "a5634d42df58da51f03c8e54eca818708d2aa2ce", package = "rujira-fin" }
calc-scheduler = { workspace = true }
calc-strategy = { workspace = true }
