[package]
name = "scheduler"
version = "0.1.0"
authors = ["jamesgaddum"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
library = []

[dependencies]
calc-rs = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
rujira-rs = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
schemars = { workspace = true }
rstest = { workspace = true }
