[package]
name = "strategy"
version = "0.1.0"
authors = ["jamesgaddum"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
library = []

[dependencies]
calc-rs = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
rujira-rs = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
calc-rs-test = { workspace = true }
cw-multi-test = { workspace = true }
manager = { workspace = true }
rstest = { workspace = true }
scheduler = { workspace = true }
rujira_fin = { git = "https://gitlab.com/thorchain/rujira.git", rev = "ad78b65b2913f8bf6e9f2c3c9f67ade10991ff11", package = "rujira-fin" }
